Fix folder placeholder text issue

Change:
Use the maximum of folder name's width and grid view's width as the
width of the folder.

Bug: 811699
Change-Id: Iaa456ea4a2d19585918e4184d625793862463ea2
Reviewed-on: https://chromium-review.googlesource.com/919431
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536896}
Former-commit-id: b62c95dd0ffd1a36b823fc938a294f72ef048fc2